--- a/.classpath
+++ b/.classpath
@@ -2,6 +2,14 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
-	<classpathentry exported="true" kind="lib" path="/home/wilfred/workspace/mysql-connector-java-5.0.8/mysql-connector-java-5.0.8-bin.jar"/>
+	<classpathentry exported="true" kind="lib" path="C:/Users/Wilfred/Documents/workspace/cucumber-core-1.1.5.jar"/>
+	<classpathentry exported="true" kind="lib" path="C:/Users/Wilfred/Documents/workspace/cucumber-html-0.2.3 (2).jar"/>
+	<classpathentry exported="true" kind="lib" path="C:/Users/Wilfred/Documents/workspace/cucumber-java-1.1.5.jar"/>
+	<classpathentry exported="true" kind="lib" path="C:/Users/Wilfred/Documents/workspace/cucumber-junit-1.1.5.jar"/>
+	<classpathentry exported="true" kind="lib" path="C:/Users/Wilfred/Documents/workspace/cucumber-jvm-deps-1.0.3.jar"/>
+	<classpathentry exported="true" kind="lib" path="C:/Users/Wilfred/Documents/workspace/gherkin-2.12.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="C:/Users/Wilfred/Documents/workspace/hamcrest-all-1.3.jar"/>
+	<classpathentry exported="true" kind="lib" path="C:/Users/Wilfred/Documents/workspace/junit-4.11.jar"/>
+	<classpathentry exported="true" kind="lib" path="C:/Users/Wilfred/Documents/workspace/mysql-connector-java-5.0.8/mysql-connector-java-5.0.8-bin.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
