--- a/.classpath
+++ b/.classpath
@@ -11,5 +11,7 @@
 	<classpathentry exported="true" kind="lib" path="C:/Users/Wilfred/Documents/workspace/hamcrest-all-1.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="C:/Users/Wilfred/Documents/workspace/junit-4.11.jar"/>
 	<classpathentry exported="true" kind="lib" path="C:/Users/Wilfred/Documents/workspace/mysql-connector-java-5.0.8/mysql-connector-java-5.0.8-bin.jar"/>
+	<classpathentry kind="lib" path="jgoodies-common-1.8.0.jar" sourcepath="jgoodies-common-1.8.0-sources.jar"/>
+	<classpathentry kind="lib" path="jgoodies-forms-1.8.0.jar" sourcepath="jgoodies-forms-1.8.0-sources.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
